--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">TaxiYa</string>
     <string name="titulo">TaxiYa</string>
     <string name="goBack">Volver</string>
+    <string name="default_web_client_id">1:308312830500:android:09a9cb10e3c829c734deb1</string>
 </resources>
