Mejorada eficiencia y navegación

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,4 +56,5 @@
     <string name="listaDeRutas">Rutas</string>
     <string name="de">De</string>
     <string name="a">A</string>
+    <string name="eliminarRuta">Eliminar ruta</string>
 </resources>
