Corregido el acceso a firebase para acceder a usuarios y rutas de forma segura. Añadido tratamiento de usuarios con BBDD firebase. Corregidos errores de login/signup, carga de rutas, datos de usuario, etc.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,4 +57,5 @@
     <string name="de">De</string>
     <string name="a">A</string>
     <string name="eliminarRuta">Eliminar ruta</string>
+    <string name="cerrarSesion">Cerrar sesión</string>
 </resources>
