- Mejora en estética  - Cuando conductor y cliente marcan su ruta como no visible (botón eliminar) -> se elimina de firebase por completo

--- a/app/src/main/java/com/jlhipe/taxiya/TODO
+++ b/app/src/main/java/com/jlhipe/taxiya/TODO
@@ -19,3 +19,7 @@
                         -> Cuando se marque como inactivo aparecerá un resumen de km realizados ese día
 - Screen historial rutas ->
 - Screen nueva petición ruta ->
+
+
+//TODO El mapa de detallesRuta debe mostrar TAMBIEN el destino
+//TODO Que cuando no se usa AppScaffold se muestre el logo TaxiYa peque arriba
