--- a/app/src/main/java/com/jlhipe/taxiya/TODO
+++ b/app/src/main/java/com/jlhipe/taxiya/TODO
@@ -1,3 +1,7 @@
+Claves API producción
+SHA1: 3C:8D:15:49:D6:AD:02:68:80:55:AF:B7:3F:80:C0:C6:35:6F:62:A9
+SHA256: C6:22:34:F7:70:24:E4:5D:0F:6A:3F:C1:FC:7E:08:A6:60:AC:3B:9D:87:C7:CD:8D:A7:F2:24:5A:21:B2:CC:2E
+
 - Modelo para usuario con variable boolean esConductor
 - Mover método generateRandomID a su ViewModel
 - ¿Debería poder un conductor pedir un taxi?
