--- a/app/src/main/java/com/jlhipe/taxiya/TODO
+++ b/app/src/main/java/com/jlhipe/taxiya/TODO
@@ -37,6 +37,7 @@ SHA256: C6:22:34:F7:70:24:E4:5D:0F:6A:3F:C1:FC:7E:08:A6:60:AC:3B:9D:87:C7:CD:8D:
 //HECHO -> dibujar rutas en el mapa
 //HECHO -> Añadir confirmación al botón de "Eliminar ruta"
 //HECHO -> En la pantalla de buscar rutas como conductor, que se recargue cada X segundos
+//HECHO -> Evitar que pueda "volver atrás" con el botón android cuando no nos interese
 
 //TODO Comprobar que la cámara de ubicación en el mapa al crear ruta o buscar cliente sea correcta
 //TODO Si falla la generación de polylines, reintentar al menos una vez
