--- a/app/src/main/java/com/jlhipe/taxiya/TODO
+++ b/app/src/main/java/com/jlhipe/taxiya/TODO
@@ -38,12 +38,13 @@ SHA256: C6:22:34:F7:70:24:E4:5D:0F:6A:3F:C1:FC:7E:08:A6:60:AC:3B:9D:87:C7:CD:8D:
 //HECHO -> Añadir confirmación al botón de "Eliminar ruta"
 //HECHO -> En la pantalla de buscar rutas como conductor, que se recargue cada X segundos
 //HECHO -> Evitar que pueda "volver atrás" con el botón android cuando no nos interese
+//HECHO -> Al crear ruta, al cambiar la ubicación no debería mover la cámara
+//HECHO -> Comprobar que la cámara de ubicación en el mapa al crear ruta o buscar cliente sea correcta
+//HECHO -> Si falla la generación de polylines, reintentar al menos una vez
+//HECHO -> Cambiar icono floatingAction "+" por texto "crear ruta" o "buscar cliente" <- investigar por qué no funciona o volver a dejar solo icono
 
-//TODO Comprobar que la cámara de ubicación en el mapa al crear ruta o buscar cliente sea correcta
-//TODO Si falla la generación de polylines, reintentar al menos una vez
 //TODO Botón de reiniciar ruta cancelada
 //TODO El control de distancias se debe hacer en el viewModel, con la actualización de ubicación. No se debe hacer en el composable
-//TODO Cambiar icono floatingAction "+" por texto "crear ruta" o "buscar cliente" <- investigar por qué no funciona o volver a dejar solo icono
 //TODO Implementar Botón para marcar conductor como activo/inactivo y que al usuario le avise si no hay conductores en un radio de km (Alternativa -> Que mientras esté la app activa el usuario conste como activo en firebase/usuarios)
 //TODO Extra -> Al finalizar ruta, dar al conductor la posibilidad de dirigir a su punto original de antes de aceptar ruta
 //TODO Extra -> Implementar notificaciones para avisar de ruta cancelada, conductor en posicion de cliente, etc
