Mejorada la estética de toda la app, incluido dark mode

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -103,4 +103,5 @@
     <string name="crearCuenta">Crear cuenta</string>
     <string name="siCancelar">Sí, cancelar</string>
     <string name="noAnular">No, anular</string>
+    <string name="rutaHaSidoCancelada">La ruta ha sido cancelada</string>
 </resources>
