--- a/app/src/main/java/com/jlhipe/taxiya/TODO
+++ b/app/src/main/java/com/jlhipe/taxiya/TODO
@@ -42,8 +42,8 @@ SHA256: C6:22:34:F7:70:24:E4:5D:0F:6A:3F:C1:FC:7E:08:A6:60:AC:3B:9D:87:C7:CD:8D:
 //HECHO -> Comprobar que la cámara de ubicación en el mapa al crear ruta o buscar cliente sea correcta
 //HECHO -> Si falla la generación de polylines, reintentar al menos una vez
 //HECHO -> Cambiar icono floatingAction "+" por texto "crear ruta" o "buscar cliente" <- investigar por qué no funciona o volver a dejar solo icono
+//HECHO -> Alternativa al AppScaffold que use temas para usar como composable alternativo
 
-//TODO Alternativa al AppScaffold que use temas para usar como composable alternativo
 //TODO Acabar de afinar el tema -> Meterle los colores que uso en la app y buscar versiones (más oscuras) para el modo oscuro
 //TODO Botón de reiniciar ruta cancelada
 //TODO El control de distancias se debe hacer en el viewModel, con la actualización de ubicación. No se debe hacer en el composable
